/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

apply(from = "$rootDir/versionsPlugin.gradle")
plugins {
    `java-library`
    `maven-publish`
    id("com.github.ben-manes.versions") version "0.52.0"
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}

dependencies {
    api(libs.com.google.code.gson.gson)
    api(libs.com.github.oshi.oshi.core)
    api(libs.com.twelvemonkeys.imageio.imageio.core)
    api(libs.com.twelvemonkeys.imageio.imageio.jpeg)
    api(libs.com.twelvemonkeys.imageio.imageio.tiff)
    api(libs.com.twelvemonkeys.imageio.imageio.webp)
    api(libs.net.coobird.thumbnailator)
    api(libs.com.github.adedayo.intellij.sdk.forms.rt)
    api(libs.org.apache.logging.log4j.log4j.api)
    api(libs.org.apache.logging.log4j.log4j.core)
    api(libs.org.apache.logging.log4j.log4j.slf4j2.impl)
    api(libs.org.slf4j.slf4j.api)
    compileOnly(libs.org.projectlombok.lombok)
    annotationProcessor(libs.org.projectlombok.lombok)
}

group = "top.nserly"
version = "1.0-SNAPSHOT"
description = "PicturePlayer"
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc>() {
    options.encoding = "UTF-8"
}
